--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -8,10 +8,10 @@
     <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
 {% compressed_js 'webapp-all' %}
+    <script type="text/javascript">
+       var g_authenticated = {% if request.user.is_authenticated %}1{% else %}0{% endif %};   
+    </script>
 
-   <script type="text/html" id="wallEventTemplate">
-      {% straight_include "yabase/app/wallEvent.mustache" %}
-   </script>
 
    <script type="text/html" id="radioTemplate">
       {% straight_include "yabase/app/radio.mustache" %}
@@ -21,10 +21,16 @@
       {% straight_include "yabase/app/track.mustache" %}
    </script>
 
+{% if request.user.is_authenticated %}
    <script type="text/html" id="wallInputTemplate">
       {% straight_include "yabase/app/wallInput.mustache" %}
    </script>
     
+   <script type="text/html" id="wallEventTemplate">
+      {% straight_include "yabase/app/wallEvent.mustache" %}
+   </script>
+{% endif %}
+
 {% endblock %}
 {% block head_title %}{% trans "Yasound" %}{% endblock %}
 {% block body %}
@@ -41,7 +47,6 @@
             <div id='player'>
             </div>
             <div id='wall-input'>
-            coucou
             </div>
 			<div id='wall'>
 			</div>
