--- a/yaapp/templates/yabase/app/radio.mustache
+++ b/yaapp/templates/yabase/app/radio.mustache
@@ -1,6 +1,6 @@
    <div id='radio-picture' class='thumbnail'>
-       <img src="{{ picture }}" width="256px" height="256px"/>
+       <img src="<% picture %>" width="256px" height="256px"/>
    </div>
    <div id='radio-title'>
-       <h1>{{ name }}</h1>
+       <h1><% name %></h1>
     </div>
