--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,9 +1,9 @@
    <div id='track-picture' class='thumbnail'>
-       <img id='track-image' src='{{ cover }}' width="160px" height="160px"/>
+       <img id='track-image' src='<% cover %>' width="160px" height="160px"/>
    </div>
    <div id='track-details'>
-       <h2><span id='track-name'>{{ name }}</span></h2>
-       <p>{{ i18n_by }} <strong><span id='track-artist'>{{ artist }}</span></strong> - <strong><span id='track-album'></span></strong></p>
+       <h2><span id='track-name'><% name %></span></h2>
+       <p><% i18n_by %> <strong><span id='track-artist'><% artist %></span></strong> - <strong><span id='track-album'></span></strong></p>
        <div class="btn-toolbar">
        <div class="btn-group">
           <a class="btn" id='play'><i class="icon-play"></i></a>
@@ -13,9 +13,9 @@
        </div>
 
        <div class="btn-group">
-       <a class="btn" id='btn-buy' href="{{ buy_link }}" target='_blank'>
+       <a class="btn" id='btn-buy' href="<% buy_link %>" target='_blank'>
         <i class="icon-shopping-cart"></i>
-        {{ i18n_buy }}
+        <% i18n_buy %>
         </a>
         </div>
           <div class="progress no-ease" id='volume-control' onmousedown="return false">
