--- a/yaapp/templates/yabase/app/wallEvent.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.mustache
@@ -1,5 +1,6 @@
 {% load i18n %}
-<div>
+<div class='wall-event message'>
+<img src='<% user_picture %>'/>
 <h2><% start_date %></h2>
 <p><% text %></p>
 </div>
