--- a/yaapp/templates/yabase/app/wallEvent.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.mustache
@@ -1,6 +1,8 @@
 {% load i18n %}
-<div class='wall-event message'>
+<div class='wall-event-message'>
 <img src='<% user_picture %>'/>
-<h2><% start_date %></h2>
+<div class='date'><% start_date %></div>
+<h2><% user_name %></h2>
 <p><% text %></p>
+<div class='clear'></div>
 </div>
