--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/media/css/style.css"/>
 
-    <!--[if lte IE 7]>
+    <!--[if lte IE 7] -->
         <link rel="stylesheet" href="/media/css/ie.css"/>
     <!--<![endif]-->
 
