--- a/yaapp/templates/yabase/app/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.like.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='wall-event-message'>
 <img src='/media/images/like.png'/>
-<div class='date'><% start_date %></div>
+<div class='date'><% formatted_start_date %></div>
 <h2><% user_name %> {% trans "like" %} <% song_name %></h2>
 <p><% text %></p>
 <div class='clear'></div>
