--- a/yaapp/templates/yabase/app/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.message.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='wall-event-message'>
 <img src='<% user_picture %>'/>
-<div class='date'><% start_date %></div>
+<div class='date'><% formatted_start_date %></div>
 <h2><% user_name %></h2>
 <p><% text %></p>
 <div class='clear'></div>
