better webapp skin

--- a/yaapp/templates/yabase/app/radio.mustache
+++ b/yaapp/templates/yabase/app/radio.mustache
@@ -1,8 +1,8 @@
 {% load i18n %}
-   <div id='radio-picture' class='thumbnail'>
+   <div id='webapp-radio-picture' class='thumbnail'>
        <img src="<% picture %>" width="256px" height="256px"/>
    </div>
-   <div id='radio-title'>
+   <div id='webapp-radio-title'>
         <h1><% name %></h1>
    <a class="btn" id='btn-favorite'>
     <i class="icon-star-empty"></i>
