--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,10 +1,13 @@
 {% load i18n %}  
-   <div id='track-picture' class='thumbnail'>
-       <img id='track-image' src='<% cover %>' width="160px" height="160px"/>
+   <div class='picture'>
+       <img id='track-image' src='<% cover %>' width="84px" height="84px"/>
    </div>
-   <div id='track-details'>
-       <h2><span id='track-name'><% name %></span></h2>
-       <p>{% trans "By" %} <strong><span id='track-artist'><% artist %></span></strong> - <strong><span id='track-album'></span></strong></p>
+   <div id='details'>
+       <div id='player-title'>
+       <% name %> {% trans "By" %} 
+       <strong><span id='track-artist'><% artist %></span></strong> - <strong>
+       <span id='track-album'></span></strong>
+       </div>
        <div class="btn-toolbar">
        <div class="btn-group">
           <a class="btn" id='play'><i class="icon-play"></i></a>
