--- a/yaapp/templates/yabase/app/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.like.mustache
@@ -1,8 +1,8 @@
 {% load i18n %}
-<div class='wall-event-message'>
-<img src='/media/images/like.png'/>
+<div class='wall-event-message alert alert-success'>
+<img src='/media/images/like.png'  width='32px' height='32px'/>
 <div class='date'><% formatted_start_date %></div>
-<h2><% user_name %> {% trans "like" %} <% song_name %></h2>
+<h2><% user_name %> {% trans "likes" %} <% song_name %></h2>
 <p><% text %></p>
 <div class='clear'></div>
 </div>
