--- a/yaapp/templates/yabase/app/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.message.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class='wall-event-message'>
-<img src='<% user_picture %>'/>
+<img src='<% user_picture %>' width='48px' height='48px'/>
 <div class='date'><% formatted_start_date %></div>
 <h2><% user_name %></h2>
 <p><% text %></p>
