--- a/yaapp/templates/yabase/app/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/wallEvent.song.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div class='wall-event-message'>
-<img src='/media/images/default_album.jpg'/>
+<div class='wall-event-message alert alert-info'>
+<img src='/media/images/default_album.jpg' width='32px' height='32px'/>
 <div class='date'><% formatted_start_date %></div>
 <h2><% song_name %> <% song_album %> <% song_artist %></h2>
 <p><% text %></p>
