added twitter & facebook share (wip)
what needs to be done :

* share text for twitter & facebook
* test facebook message & picture

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -22,6 +22,12 @@ body {
 	float:left;
 }
 
+.share {
+	float:left;
+	margin-top:32px;
+	margin-left:32px;
+}
+
 #webapp-radio {
     margin-top: 24px;
     background-color: #F5F5F5;
