--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -9,8 +9,7 @@
 
        <div id='player-title'>
        <% name %> {% trans "By" %} 
-       <strong><span id='track-artist'><% artist %></span></strong> - <strong>
-       <span id='track-album'></span></strong>
+       <strong><span id='track-artist'><% artist %></span></strong>
        </div>
        <div class="btn-toolbar">
        <div class="btn-group">
@@ -26,9 +25,13 @@
         {% trans 'Buy on iTunes' %}
         </a>
         </div>
+        <a href="http://twitter.com/share" id="tweet" target="_blank" ><img src="http://twitter-badges.s3.amazonaws.com/twitter-a.png" /></a>
+        <div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
+        
           <div class="progress no-ease" id='volume-control' onmousedown="return false">
             <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
           </div>
        </div>
+       
    </div> 
 
