--- a/yaapp/apps/yaweb/templates/yaweb/index.html
+++ b/yaapp/apps/yaweb/templates/yaweb/index.html
@@ -21,6 +21,15 @@ content="Avec Yasound, créez votre radio en un instant, écoutez la musique ave
 <link href="/media/yaweb/css/intro.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/media/yaweb/js/mootools-core-1.4.5-full-nocompat.js"></script>
 <script type="text/javascript" src="/media/yaweb/js/mootools-more-1.4.0.1.js"></script>
+
+<script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript">
+jQuery.noConflict();
+</script>
+<script type="text/javascript" src="/media/js/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" href="/media/js/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+
+<script type="text/javascript" src="/media/yaweb/js/elecsounds.js"></script>
 <script type="text/javascript">
 // GOOGLE ANALYTICS
   var _gaq = _gaq || [];
@@ -293,7 +302,9 @@ de styles et de nouveaux talents</td>
 <div id="puce3" class="puce" onclick="goToSlide(3)"></div>
 <div id="puce4" class="puce" onclick="goToSlide(4)"></div>
 </div>
-<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
+<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url elecsounds %}" class="boxed iframe">Elecsounds</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
+
+
 </div>
 <div id="reseaux">
   <div id="gone">
