fixed css boulette

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -42,7 +42,7 @@ Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner
 </p>
 
 <p class='lead'>Vous pensez que ce sera Nicolas Sarkozy ?<br/> 
-Publiez le message <strong></strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
+Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
 </p>
     <h2>4. Le tirage au sort aura lieu le 7 mai</h2>
     
