added links on radios on terms

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -37,11 +37,11 @@
     
     <h2>3. Publiez votre pronostic</h2>
 <p class='lead'>
-Vous pensez que ce sera François Hollande ? <br/>
+Vous pensez que ce sera <a href='https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae' target="_blank">François Hollande</a> ? <br/>
 Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Hollande »</strong>
 </p>
 
-<p class='lead'>Vous pensez que ce sera Nicolas Sarkozy ?<br/> 
+<p class='lead'>Vous pensez que ce sera <a href='https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411' target="_blank">Nicolas Sarkozy ?</a><br/> 
 Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
 </p>
     <h2>4. Le tirage au sort aura lieu le 7 mai</h2>
