--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -13,37 +13,61 @@
 </head>
 <body>
 <div class='container-fluid'>
+
     <div class='row-fluid'>
-	<div id='unlightbox'>
-		<a href='#'>Cliquez ici pour voir en plein écran</a>
-	</div>
+        <div class='span12'>
+        <div id='elec-logo'>
+        <a href='#' ><img src='/media/images/VSsmall.png' alt='Elecsounds'/></a>
+        </div>
+        <a href='#'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        </div>
     </div>
+
     
     <div class="page-header">
-    <h1>Pour jouer</h1>
+    <h1>Pour jouer <small>du 23 avril au 4 mai 2012</small></h1>
     </div>
     
     <div class='row-fluid'>
-    <h2>1. Lisez les dernières infos de Yasound sur l’un de ces blogs :</h2>
+    
+    <div id='es-haveblog' class='well'>
+    Si vous avez un blog  et si vous souhaitez participer l’opération merci d’écrire à  <a href='mailto:astrid@yasound.com'>astrid@yasound.com</a>
+    </div>
+    
+    <h2>1. Choisissez l'un de ces blogs puis jouez :</h2>
+    
+    <ul class='es-blogs'>
+       <li><a href='http://www.geekeriesdefilles.com/' target='_blank'>Geekeries de filles</a> </li>
+       <li><a href='http://www.julientellouck.com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
+       <li><a href='http://www.weblife.fr/' target='_blank'>Weblife</a></li>
+       <li><a href='http://wearethemascotte.fr/' target='_blank'>Wearethemascote</a></li> 
+       <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
+    </ul> 
+    
     </div>
         
     <div class='row-fluid'>
     <h2>2. Suivez le compte Twitter</h2>
-    
-    <a href="https://twitter.com/YasoundSAS" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-size="large">Suivre @YasoundSAS</a>
+    <div id='es-follow'><a href="https://twitter.com/YasoundSAS" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-size="large">Suivre @YasoundSAS</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+    </div>
     </div>
     
+    <div class='row-fluid'>
     <h2>3. Publiez votre pronostic</h2>
+
+    <div id='es-haveblog' class='well'>
+        <p>* Remplacer "@blog.fr" par le compte twitter du blog que vous avez choisi, par exemple : <em>"je joue avec @YasoundSAS et @Weblifefr..."</em>
+    </div>
 <p class='lead'>
-Vous pensez que ce sera <a href='https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae' target="_blank">François Hollande</a> ? <br/>
-Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Hollande »</strong>
+Vous pensez que ce sera <a href='https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae' target="_blank">François Hollande</a> ?
+Publiez le message <strong>« Je joue avec @YasoundSAS et <em>@blog.fr*</em> pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Hollande »</strong>
 </p>
 
-<p class='lead'>Vous pensez que ce sera <a href='https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411' target="_blank">Nicolas Sarkozy ?</a><br/> 
-Publiez le message <strong>« Je joue avec @YasoundSAS et @blog.fr pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
+<p class='lead'>Vous pensez que ce sera <a href='https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411' target="_blank">Nicolas Sarkozy ?</a>
+Publiez le message <strong>« Je joue avec @YasoundSAS et <em>@blog.fr*</em> pour gagner un iPad 3 64 G Wifi/4G. Je parie sur l’#élecsound de #Sarkozy »</strong>
 </p>
+
     <h2>4. Le tirage au sort aura lieu le 7 mai</h2>
     
 <p class='lead'>Le tirage au sort aura lieu le 7 mai parmi les participants 
@@ -57,7 +81,13 @@ ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur 
 <li>Attention : la création de profils multiples pour participer au concours peut entrainer la suspension de tous vos comptes</li> 
 </ul>
 
+    <div class='row-fluid'>
+        <div id='unlightbox'>
+            <a href='#'>Cliquez ici pour voir en plein écran</a>
+        </div>
+    </div>
+
 </div>
-</div>
+
 </body>
 </html>
