--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="/media/yaweb/js/unlightbox.js"></script>
+<link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
 <link href="/media/yaweb/css/elecsounds.css" rel="stylesheet" type="text/css" />
   <title>ElecSounds</title>
 </head>
@@ -15,7 +16,8 @@
     <a href='{% url elecsounds_terms %}'><img src='/media/yaweb/images/elecsounds/elecsounds.jpg' class='stretch' alt='Jeu Elecsounds' width='1517' height='817'/></a>
 </div>
 
-<div id='nicolas'>&nbsp;</div>
-<div id='francois'>&nbsp;</div>
+<a class="btn" id='nicolas' href="https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411" target='_blank'>Ecouter sa radio</a>
+<a class="btn" id='francois' href="https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae" target='_blank'>Ecouter sa radio</a>
+
 </body>
 </html>
