added link to term on elecsound page added bigger logo

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds.html
@@ -19,5 +19,7 @@
 <a class="btn" id='nicolas' href="https://api.yasound.com/listen/6fa46bfa1f824879b503e2aebbff7411" target='_blank'>Ecouter sa radio</a>
 <a class="btn" id='francois' href="https://api.yasound.com/listen/29b1e874c84740958b0d4363654376ae" target='_blank'>Ecouter sa radio</a>
 
+<a class="btn" id='terms' href="{% url elecsounds_terms %}">Détails du jeu concours</a>
+
 </body>
 </html>
