--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -16,12 +16,15 @@
 
     <div class='row-fluid'>
         <div class='span12'>
-        <div id='elec-logo'>
-        <a href='#' ><img src='/media/images/VSsmall.png' alt='Elecsounds'/></a>
-        </div>
-        <a href='#'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        <a href='#' id='logo'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
         </div>
     </div>
+
+    <div class='row-fluid'>
+        <div class='span12'>
+            <img src='/media/images/VSmedium.jpg' alt='Elecsounds medium logo'/>
+        </div>
+    </div>    
 
     
     <div class="page-header">
@@ -88,6 +91,6 @@ ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur 
     </div>
 
 </div>
-
+</div>
 </body>
 </html>
