--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -33,7 +33,7 @@
     
     <div class='row-fluid'>
     
-    <div id='es-haveblog' class='well'>
+    <div class='well es-right'>
     Si vous avez un blog  et si vous souhaitez participer l’opération merci d’écrire à  <a href='mailto:astrid@yasound.com'>astrid@yasound.com</a>
     </div>
     
@@ -59,7 +59,7 @@
     <div class='row-fluid'>
     <h2>3. Publiez votre pronostic</h2>
 
-    <div id='es-haveblog' class='well'>
+    <div class='es-right well'>
         <p>* Remplacer "@blog.fr" par le compte twitter du blog que vous avez choisi, par exemple : <em>"je joue avec @YasoundSAS et @Weblifefr..."</em>
     </div>
 <p class='lead'>
@@ -76,21 +76,33 @@ Publiez le message <strong>« Je joue avec @YasoundSAS et <em>@blog.fr*</em> 
 <p class='lead'>Le tirage au sort aura lieu le 7 mai parmi les participants 
 ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur choisi, de gagner un iPad3 64 Go Wifi 4G blanc ou noir
 </p> 
-
+    
+    
+    </div>
+    <div class='row-fluid'>
+    
+    
     <h2>Informations utiles</h2>
+
+    <div class='es-right well'>
+        <p>Télécharger le règlement du jeu <br/><em>(à venir)</em></p>
+    </div>
+
+
 <ul>
 <li>Tout tweet incomplet ne sera pas pris en compte</li>              
 <li>Jeu limité à 1 tweet par participant et par jour, du 23 avril au 4 mai</li>
 <li>Attention : la création de profils multiples pour participer au concours peut entrainer la suspension de tous vos comptes</li> 
 </ul>
-
+    
+    </div>
+    
     <div class='row-fluid'>
         <div id='unlightbox'>
             <a href='#'>Cliquez ici pour voir en plein écran</a>
         </div>
     </div>
 
-</div>
 </div>
 </body>
 </html>
