elecsounds: added business actor in blog list

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -45,6 +45,7 @@
        <li><a href='http://www.weblife.fr/' target='_blank'>Weblife</a></li>
        <li><a href='http://wearethemascotte.fr/' target='_blank'>Wearethemascote</a></li> 
        <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
+       <li><a href='http://business-actor.com/ipad-yasound/' target='_blank'>Business Actor</a></li>
     </ul> 
     
     </div>
