added pdf terms for elecsounds

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -86,7 +86,7 @@ ayant trouvé le bon candidat et vous permettra à vous, ainsi qu’au blogueur 
     <h2>Informations utiles</h2>
 
     <div class='es-right well'>
-        <p>Télécharger le règlement du jeu <br/><em>(à venir)</em></p>
+        <p><a href='/media/documents/reglement-elecsounds.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
     </div>
 
 
