elecsounds: added iPhoneSoft

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -40,6 +40,7 @@
     <h2>1. Choisissez l'un de ces blogs puis jouez :</h2>
     
     <ul class='es-blogs'>
+       <li><a href='http://iphonesoft.fr/' target='_blank'>iPhoneSoft</a> </li>
        <li><a href='http://www.geekeriesdefilles.com/' target='_blank'>Geekeries de filles</a> </li>
        <li><a href='http://www.julientellouck.com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
        <li><a href='http://www.weblife.fr/' target='_blank'>Weblife</a></li>
