elecsounds: added urban fusions & updated some links

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -40,13 +40,14 @@
     <h2>1. Choisissez l'un de ces blogs puis jouez :</h2>
     
     <ul class='es-blogs'>
-       <li><a href='http://iphonesoft.fr/' target='_blank'>iPhoneSoft</a> </li>
+       <li><a href='http://iphonesoft.fr/2012/04/23/l-elecsound-gagnez-un-ipad-3-64-go-participation-twitter' target='_blank'>iPhoneSoft</a> </li>
        <li><a href='http://www.geekeriesdefilles.com/' target='_blank'>Geekeries de filles</a> </li>
        <li><a href='http://www.julientellouck.com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
        <li><a href='http://www.weblife.fr/' target='_blank'>Weblife</a></li>
-       <li><a href='http://wearethemascotte.fr/' target='_blank'>Wearethemascote</a></li> 
+       <li><a href='http://wearethemascotte.fr/elecsounds-gagnez-un-ipad-3-avec-yasound/' target='_blank'>Wearethemascote</a></li> 
        <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
        <li><a href='http://business-actor.com/ipad-yasound/' target='_blank'>Business Actor</a></li>
+       <li><a href='http://www.urban-fusions.com/2012/04/gagnez-le-nouvel-ipad-sur-urban-fusions.html' target='_blank'>Urban Fusions</a></li>
     </ul> 
     
     </div>
