added stats on account types (facebook, yasound, twitter)

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -93,6 +93,30 @@
             {{listening_time}} 
             </td>
         </tr>
+        <tr>
+            <td>
+                {% trans "Facebook users" %}
+            </td>
+            <td>
+            {{facebook_user_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% trans "Twitter users" %}
+            </td>
+            <td>
+            {{twitter_user_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% trans "Yasound users" %}
+            </td>
+            <td>
+            {{yasound_user_count}} 
+            </td>
+        </tr>
     </tbody>
 </table>
 </div>
