--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -41,8 +41,8 @@
     
     <ul class='es-blogs'>
        <li><a href='http://iphonesoft.fr/2012/04/23/l-elecsound-gagnez-un-ipad-3-64-go-participation-twitter' target='_blank'>iPhoneSoft</a> </li>
-       <li><a href='http://www.geekeriesdefilles.com/' target='_blank'>Geekeries de filles</a> </li>
-       <li><a href='http://www.julientellouck.com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
+       <li><a href='http://www.geekeriesdefilles.com/bons-plans-de-filles/concours/jeu-concours-gagnez-un-ipad-3-avec-yasound/' target='_blank'>Geekeries de filles</a> </li>
+       <li><a href='http://www.julientellouck.com/concours-le-nouvel-ipad-a-gagner-grace-a-yasound-et-julientellouck-com/' target='_blank'>Le blog de Julien Tellouck</a></li> 
        <li><a href='http://www.weblife.fr/actus/gagner-un-ipad-3-avec-yasound-et-weblife-en-pariant-sur-le-resultat-des-presidentielles' target='_blank'>Weblife</a></li>
        <li><a href='http://wearethemascotte.fr/elecsounds-gagnez-un-ipad-3-avec-yasound/' target='_blank'>Wearethemascote</a></li> 
        <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
