elecsounds: more blog links

--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -48,6 +48,9 @@
        <li><a href='http://insomniac.fr' target='_blank'>Insomniac</a></li>
        <li><a href='http://business-actor.com/ipad-yasound/' target='_blank'>Business Actor</a></li>
        <li><a href='http://www.urban-fusions.com/2012/04/gagnez-le-nouvel-ipad-sur-urban-fusions.html' target='_blank'>Urban Fusions</a></li>
+       <li><a href='http://www.insert-coin.fr/archive/2012/04/24/elecsounds-gagnez-un-ipad-3.html' target='_blank'>Insertcoin</a></li>
+       <li><a href='http://www.iphonophile.fr/gagner-un-nouvel-ipad-de-64-go-avec-yasound/' target='_blank'>iPhonophile</a></li>
+       <li><a href='http://www.sosiphone.com/blogiphone/2012/04/24/le-futur-president-de-la-republique-francaise-vous-fait-gagner-un-nouvel-ipad-64go-wifi-lte-52781/' target='_blank'>SOS iPhone</a></li>
     </ul> 
     
     </div>
