better users skin

--- a/yaapp/templates/yabase/app/radioUser.mustache
+++ b/yaapp/templates/yabase/app/radioUser.mustache
@@ -1,6 +1,7 @@
 {% load i18n %}
-<div class='user'>
+<div class='user thumbnail'>
     <img src='<% picture %>' width='48px' height='48px'/>
-    <h2><% name %></h2>
-    <div class='clear'></div>
+    <div class='caption'>
+    <h5><% name %></h5>
+    </div>
 </div>
