--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -68,7 +68,8 @@
         <div class='span4'>
             <div id='webapp-radio'>
             </div>
-            <div id='webapp-radio-users'>
+            <div class='well'>
+            <ul id='webapp-radio-users' class='thumbnails'></ul>
             </div>
         </div>
         <div class='span8'>
