keyfigures : added connected users

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -23,6 +23,14 @@
         </tr>
         <tr>
             <td>
+                {% trans "Connected users" %}
+            </td>
+            <td>
+            {{connected_user_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
                 {% trans "Radio count" %}
             </td>
             <td>
