added anonymous user audience in yabackoffice

--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -31,6 +31,15 @@
         </tr>
         <tr>
             <td>
+                {% trans "Anonymous users" %}
+            </td>
+            <td>
+            {{anonymous_user_count}} 
+            </td>
+        </tr>
+        
+        <tr>
+            <td>
                 {% trans "Radio count" %}
             </td>
             <td>
