added wall pagination (with "more" button)

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -76,6 +76,9 @@ body {
 #webapp-wall-input {
     margin-top: 24px;
 }
+
+#wall {
+}
    
 .wall-event-message {
 	border-bottom: 1px solid #eeeeee;
