--- a/yaapp/templates/yabase/app/wallInput.mustache
+++ b/yaapp/templates/yabase/app/wallInput.mustache
@@ -1,5 +1,6 @@
 {% load i18n %}
 <form class="well form-search">
     <input type="text" class="input-large search-query">
-    <button type="submit" class="btn">{% trans "Post message" %}</button>
+    <button type="submit" class="btn" id='submit'>{% trans "Post message" %}</button>
+    <button class="btn" id='refresh'>{% trans "Refresh" %}</button>
 </form>
