removed bullet on wall events

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -79,7 +79,8 @@
         <div class='span8'>
             <div id='webapp-wall-input'>
             </div>
-			<div id='wall'>
+			<div>
+			<ul id='wall'></ul>
 			</div>
 			<div id='pagination'></div>
         </div>
