--- a/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/elecsounds_terms.html
@@ -51,6 +51,7 @@
        <li><a href='http://www.insert-coin.fr/archive/2012/04/24/elecsounds-gagnez-un-ipad-3.html' target='_blank'>Insertcoin</a></li>
        <li><a href='http://www.iphonophile.fr/gagner-un-nouvel-ipad-de-64-go-avec-yasound/' target='_blank'>iPhonophile</a></li>
        <li><a href='http://www.sosiphone.com/blogiphone/2012/04/24/le-futur-president-de-la-republique-francaise-vous-fait-gagner-un-nouvel-ipad-64go-wifi-lte-52781/' target='_blank'>SOS iPhone</a></li>
+       <li><a href='http://www.lesdivagationsdecalipso.fr/et-si-on-gagnait-un-ipad/' target='_blank'>Les divagations de Calipso</a></li>
     </ul> 
     
     </div>
