--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -62,8 +62,10 @@
       <div class="navbar-inner">
         <div class="container-fluid">
             <a href='/' class='brand'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+                        
           <div class="nav-collapse">
-            <div class="btn-group pull-right" id='user-menu'>
+            <div class='pull-right'>
+                <div class="btn-group " id='user-menu'>            
                 {% if request.user.is_authenticated %}
                         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="icon-user"></i>
@@ -81,11 +83,18 @@
                         <i class="icon-user"></i>
                             {% trans "Not logged" %}
                         <span class="caret"></span> </a>
-                {% endif %}                
+                {% endif %}
+                </div>       
+                <div>         
+                    <form class="navbar-search pull-right" action="" id='tbar-search'>
+                    <input class="search-query span2" type="text" placeholder="{% trans 'Search' %}">
+                    </form>
+                </div>    
             </div>
-                        
           </div><!--/.nav-collapse -->
             <div id='webapp-player'>
+            </div>
+            <div class='nav-collapse'>
             </div>
         </div>
       </div>
