--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -87,7 +87,7 @@
                 </div>       
                 <div>         
                     <form class="navbar-search pull-right" action="" id='tbar-search'>
-                    <input class="search-query span2" type="text" placeholder="{% trans 'Search' %}">
+                    <input class="search-query span2" type="text" id='search-input' placeholder="{% trans 'Search' %}">
                     </form>
                 </div>    
             </div>
@@ -100,9 +100,7 @@
       </div>
     </div>
     
-<div class='container-fluid'>
-    <div id='webapp-content' class='row-fluid'>
-    </div>
+<div class='container-fluid' id='webapp-content'>
     <hr>
     <footer>
     <p>&copy; Yasound 2012</p>
