fixed view navigation problem

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -53,6 +53,10 @@
      {% include "yabase/app/radioPage.mustache" %}
    </script>
    
+   <script type='text/html' id='radioCellTemplate'>
+     {% include "yabase/app/radioCell.mustache" %}
+   </script>
+
 {% endif %}
 
 {% endblock %}
