webapp: search wip

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -57,6 +57,10 @@
      {% include "yabase/app/radioCell.mustache" %}
    </script>
 
+   <script type='text/html' id='searchPageTemplate'>
+     {% include "yabase/app/searchPage.mustache" %}
+   </script>
+
 {% endif %}
 
 {% endblock %}
