radio is shown when user click on album picture

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -2,7 +2,7 @@
 
 
    <div class='picture'>
-       <img id='track-image' src='<% cover %>' width="84px" height="84px"/>
+       <a id='track-image-link' href='{% url webapp_radio current_uuid %}'> <img id='track-image' src='<% cover %>' width="84px" height="84px"/></a>
    </div>
 
    <div id='details'>
