--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -55,7 +55,7 @@
     
     <footer>
       <div id="menu">
-      {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> | {% endif %} <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
+      {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> {% else %}<a href="{% url login %}">{% trans "Login" %}</a>{% endif %} | <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
       </div>
     </footer>
 </div>
