--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -61,6 +61,10 @@
      {% include "yabase/app/searchPage.mustache" %}
    </script>
 
+   <script type='text/html' id='favoritesPageTemplate'>
+     {% include "yabase/app/favoritesPage.mustache" %}
+   </script>
+
 {% endif %}
 
 {% endblock %}
@@ -81,7 +85,7 @@
                         <span class="caret"></span> </a>
 						<ul class="dropdown-menu">
 							<li><a href="{% url webapp_radio user_uuid %}" id='btn-my-radio' yasound:uuid='{{ user_uuid }}'>{% trans "My radio" %}</a></li>
-							<li><a href="#">{% trans "My favorites" %}</a></li>
+							<li><a href="{% url webapp_favorites %}" id='btn-favorites'>{% trans "My favorites" %}</a></li>
 							<li><a href="#">{% trans "My friends" %}</a></li>
 	                        <li class="divider"></li>
     						<li><a href="{% url logout %}">{% trans "Logout" %}</a></li>
