--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -1,6 +1,7 @@
 {% load i18n %}
-<div class='radio-cell'>
-<img src='/media/images/default_album.jpg' width='32px' height='32px'/>
-<h2><% name %></h2>
-<div class='clear'></div>
+<div class='radio-cell thumbnail'>
+    <img src='<% picture %>' width='100px' height='100px'/>
+    <div class='caption'>
+        <h5><% name %></h5>
+    </div>
 </div>
