fixed thumbnail hover

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -114,7 +114,7 @@ ul .radio-cell img {
 	margin-top:12px;
 }
 
-ul .radio-cell:hover {
+ul .radio-cell .thumbnail:hover {
 	background-color: #efefef;
 }
 ul .radio-cell .caption h5 {
