--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -10,6 +10,25 @@
     <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
     <link rel="stylesheet" href="/media/css/flashblock.css"/>
     <link rel="stylesheet" href="/media/css/webapp.css"/>
+    
+    <script type="text/javascript" src='/media/js/jquery-1.7.1.min.js'></script>
+    <script type="text/javascript" src='/media/js/jquery.timers.js'></script>
+    <script type="text/javascript" src='/media/js/moment.min.js'></script>
+    <script type="text/javascript" src='/media/js/moment-lang-all.min.js'></script>
+    <script type="text/javascript" src='/media/js/sm/soundmanager2-nodebug-jsmin.js'></script>
+    <script type="text/javascript" src='/media/js/json2.js'></script>
+    <script type="text/javascript" src='/media/js/mustache-django-friendly.js'></script>
+    <script type="text/javascript" src='/media/js/ICanHaz-no-mustache.min.js'></script>
+    <script type="text/javascript" src='/media/js/underscore-1.3.1.js'></script>
+    <script type="text/javascript" src='/media/js/backbone-min.js'></script>
+    <script type="text/javascript" src='/media/js/backbone-tastypie.js'></script>
+    <script type="text/javascript" src='/media/js/backbone.paginator.js'></script>
+    <script type="text/javascript" src='/media/bootstrap/js/bootstrap.min.js'></script>
+    <script type="text/javascript" src='/media/js/socket.io.js'></script>
+    <script type="text/javascript" src='/media/js/pubsub.js'></script>
+    <script type="text/javascript" src='/media/js/Namespace.js'></script>
+
+    
     {% compressed_js 'webapp-all' %}
     <script type="text/javascript">
        moment.lang('{{request.LANGUAGE_CODE}}');
